# YouTube-to-PDF-Converter

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/: main.py
src/services/: pdf_generate.py  settings_manager.py  transcript.py
src/services/settings/: settings.json
