[project]
name = "transcriptor"
version = "0.1.0"
description = "YouTube video transcript to PDF converter"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "TheFhoneiXs", email = "semihfurkansarioglu0@gmail.com" }
]
dependencies = [
    "flet>=0.28.3",
    "reportlab>=4.0.0",
    "aiohttp>=3.9.0",
]

[tool.flet]
org = "com.thefhoenixs"
product = "Transcriptor"
company = "TheFhoneiXs Dev"
copyright = "Copyright (C) 2025 by TheFhoneiXs"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]>=0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = ">=0.28.3"}

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"